--- a/metadata.yaml
+++ b/metadata.yaml
@@ -44,5 +44,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'D'
 - !lcsh 'History, Ancient'
+- GITenberg
 title: The Histories of Polybius, Vol. 1 (of 2)
 url: http://www.gutenberg.org/ebooks/44125
